--- a/CSS/Nav.css
+++ b/CSS/Nav.css
@@ -12,7 +12,15 @@ nav, #menu-checkbox {
     background: #F0FBFF;
     width: 100%;
     height: 100vh;
+    z-index: 100;
     
+}
+
+.section-navigation {
+    padding: 3%;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
 }
 
 nav {
@@ -45,9 +53,9 @@ header {
 }
 
 .hamburger-icon {
-    padding: 10px;
     float: right;
     cursor: pointer;
+    font-size: 20px;
 }
 
 
@@ -72,14 +80,14 @@ nav a {
     width: 5rem;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 800px) {
     nav {
         display: block;
         position: static;
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding-right: 1rem;
+        
     }
 
     .section-navigation {
@@ -87,6 +95,7 @@ nav a {
         background-color: #F0FBFF;
         position: fixed;
         display: flex;
+        flex-direction: row;
         justify-content: space-between;
         align-items: center;
         padding: 1rem 0;
