--- a/CSS/Nav.css
+++ b/CSS/Nav.css
@@ -2,31 +2,40 @@
 
 
 
-nav, #menu-checkbox {
-    display: none;
-}
-
-#menu-checkbox:checked ~ nav {
-    display: flex;
-    justify-content: center;
-    background: #F0FBFF;
-    width: 100%;
-    height: 100vh;
-    z-index: 100;
-    
-}
 
 .section-navigation {
-    padding: 3%;
+    width: 100%;
+    background-color: #F0FBFF;
+    position: fixed;
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: row;
     justify-content: space-between;
+    align-items: center;
+    padding: 1rem 0;
+
 }
 
 nav {
-    position: absolute;
+    display: block;
+    flex-direction: row;
     
-   
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+
+
+.hamburger-icon {
+    display: none;
+}
+
+
+
+.logo {
+    padding-left: 2rem ;
+    width: 5rem;
 }
 
 nav li {
@@ -41,82 +50,92 @@ header {
 
 }
 
-#menu-checkbox {
-    float: right;
-    
-}
-
-#menu-checkbox:checked ~ ul {
-    display: flex;
-    
-
-}
-
-.hamburger-icon {
-    float: right;
-    cursor: pointer;
-    font-size: 20px;
-}
-
-
-
 nav a {
-    display: block;
     color: #007A94;
     padding: 10px 20px;
     text-decoration: none;
     font-family: 'poppins' , Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 1.125rem;
+    font-size: 16px;
     font-weight: 500;
     
 }
 
-.link-buytickets {
+#menu-checkbox {
+    display: none;
+}
+
+ 
+.link-contactus {
     font-weight: 900;
     color: #B75BCE;
 }
 
-.logo{
-    width: 5rem;
-}
 
-@media (min-width: 800px) {
+
+
+@media (max-width: 800px) {
+
     nav {
-        display: block;
-        position: static;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        
-    }
-
-    .section-navigation {
-        width: 100%;
-        background-color: #F0FBFF;
-        position: fixed;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        padding: 1rem 0;
-
-    }
-
-    li {
-        display: block;
-    }
-
-
-    .hamburger-icon {
         display: none;
     }
 
-    nav a {
-        display: inline-block;
+    #menu-checkbox:checked ~ nav {
+        display: flex;
+        flex-direction: column;
+        background: #F0FBFF;
+        width: 100%;
+        height: 100vh;
+        align-items: flex-start;
+        position: fixed;
+        top: 80px; 
+        left: 0;
+    }
+
+    .hamburger-icon {
+        display: flex;
+        cursor: pointer;
+        font-size: 20px;
+        z-index: 101; 
+    }
+
+    .section-navigation {
+        display: flex;
+        flex-direction: row-reverse;
     }
 
     .logo {
-        padding-left: 2rem ;
+        padding-left: 1rem;
+        padding-top: 1rem; 
+        order: 2; 
+    }
+
+    #menu-checkbox:checked ~ .logo {
+        order: 2; 
+    }
+
+    .hamburger-icon {
+        display: flex;
+        flex-direction: row;
+        float: right;
+        cursor: pointer;
+        font-size: 20px;
+        z-index: 100
+    }
+    
+    
+   
+
+    nav ul {
+        display: flex;
+        flex-direction: column;
+        align-self: center;
+        justify-content: center;
+        align-content: center;
+    }
+
+    nav a {
+        display: block;
+        align-content: center;
     }
 }
 
