--- a/CSS/contribution.css
+++ b/CSS/contribution.css
@@ -11,34 +11,30 @@
 
 .card-container {
     display: flex;
+    justify-content: center;
     gap: 1rem;
+    flex-wrap: wrap;
+
 }
-
-
 
 .vertical-card {
-    display: flex;
-    flex-direction: column;
+    width: 350px;
     background-color: #DAF5FB;
-    height: 900px;
-    width: 500px;
-}
-
-
-.vertical-card-image {
-    display: block; 
-    width: 500px;
-    height: 400px;
-    object-fit: cover;
+    border-radius: 10px;
     overflow: hidden;
-
+    
 }
 
-.v-card-content-2 {
+.vertical-card img {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+}
+
+.v-card-content {
     padding: 32px 24px;
 }
 
 .get-in-touch {
     padding-top: 5rem;
 }
-
