--- a/CSS/exhibitions.css
+++ b/CSS/exhibitions.css
@@ -1,37 +1,41 @@
 
 .exhibitions-flex {
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 15% 0;
+    gap: 30px;
+    padding: 5% 0 2% 0;
 }
 
 .card-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: auto auto auto;
-    grid-gap: 10px;
+    display: flex;
     justify-content: center;
     gap: 1rem;
-    margin: 0 auto;
-    
+    flex-wrap: wrap;
 }
 
 .vertical-card {
-    display: flex;
-    flex-direction: column;
+    flex-basis: 30%;
+    gap: 100px;
+    width: 300px;
+    min-width: 300px;
     background-color: #DAF5FB;
-}
-
-.v-card-image {
-    display: block; 
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    border-radius: 10px;
     overflow: hidden;
 }
 
+.card-container img {
+    width: 100%;
+    height: 270px;
+    object-fit: cover;
+
+}
+
+
 .card-content {
     padding: 2rem;
+}
+
+.card-content button {
+    margin-top: 2rem;
 }
