--- a/CSS/index.css
+++ b/CSS/index.css
@@ -296,7 +296,6 @@
 
 .section-news-flex {
     display: flex;
-    justify-content: center;
     flex-direction: column;
     padding: 15% 0;
     
@@ -305,32 +304,30 @@
 
 .news-container {
     display: flex;
+    justify-content: flex-start;
     gap: 1rem;
+    flex-wrap: wrap;
     
 }
 
 .vertical-card {
-    display: flex;
-    flex-direction: column;
+    width: 500px;
+
     background-color: #DAF5FB;
-}
-
-.vertical-card-image {
-    display: block; 
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    border-radius: 5px;
     overflow: hidden;
-
 }
 
-.v-card-content-1 {
-    flex: 1;
+.vertical-card img {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
 }
 
-.v-card-content-2 {
-    
+
+.v-card-content {
     padding: 32px 24px;
+    align-items: center;
 }
 
 
