--- a/CSS/contribution.css
+++ b/CSS/contribution.css
@@ -1,12 +1,27 @@
 
-.contribution {
+.wrapper-main{
+    width: 50%;
+    margin: 0 auto;
+}
+
+.get-involved {
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     gap: 10px;
-    padding: 15% 0;
+    padding: 5% 0 15% 0;
+}
 
+.contribution {
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    padding: 5% 0;
+}
+
+.contribution h1 {
+    align-self: center;
 }
 
 .card-container {
@@ -38,3 +53,4 @@
 .get-in-touch {
     padding-top: 5rem;
 }
+
