Updated feautures and responsiveness

--- a/CSS/Upcoming-Events.css
+++ b/CSS/Upcoming-Events.css
@@ -90,24 +90,52 @@
 
 @media (max-width: 1200px) {
     .section-upcomingevents-flex {
-        flex-direction: column;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        align-self: center;
+        align-content: center;
+        justify-items: center;
+        justify-self: center;
+        flex-wrap: wrap;
+        padding: 15% 0%;
+    
+        
     }
+
+
+
 
    
     .horizontal-card {
         display: flex;
         flex-direction: column;
         background-color: #DAF5FB;
-        width: 400px;
+        width: 300px;
         height: auto;
         border-radius: 2px;
         align-self: center;
         overflow: hidden;
     }
 
+    .upcomingevents-1 {
+        flex: 1;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        justify-self: center;
+    }
+    
+    
+    .upcomingevents-2 {
+        flex: 1;
+        display: flex;
+    }
+
     .card-content-1 {
         display: flex;
-       
+        justify-content: center;
+
     }
     
     .horizontal-card img{
@@ -118,7 +146,6 @@
     }
     
     .card-content-2 {
-        flex: 2;
         display: flex;
         flex-direction: column;
         align-self: center;
