--- a/CSS/Nav.css
+++ b/CSS/Nav.css
@@ -18,11 +18,9 @@
 nav {
     display: block;
     flex-direction: row;
-    
     display: flex;
     justify-content: space-between;
     align-items: center;
-
 }
 
 
@@ -51,6 +49,8 @@ header {
 }
 
 nav a {
+    transition-property: border;
+    transition-duration: 0s;
     color: #007A94;
     padding: 10px 20px;
     text-decoration: none;
@@ -60,14 +60,25 @@ nav a {
     
 }
 
+nav a:hover {
+    border-bottom: 2px solid #007A94;
+}
+
 #menu-checkbox {
     display: none;
 }
 
  
 .link-contactus {
+    transition-property: border;
+    transition-duration: 0s;
     font-weight: 900;
     color: #B75BCE;
+}
+
+.link-contactus:hover {
+    border-bottom: 2px solid #B75BCE;
+
 }
 
 
@@ -106,7 +117,6 @@ nav a {
 
     .logo {
         padding-left: 1rem;
-        padding-top: 1rem; 
         order: 2; 
     }
 
