--- a/CSS/Upcoming-Events.css
+++ b/CSS/Upcoming-Events.css
@@ -1,79 +1,48 @@
 /* START EVENTS */
 
 
+
 .section-upcomingevents-flex {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    justify-content: space-between;
+    gap: 10px;
+    padding: 10% 0 15% 0;
     flex-wrap: wrap;
-    padding: 15% 0;
-
-}
-
-.upcomingevents-1 {
-    flex: 1;
 }
 
 
-.upcomingevents-2 {
-    flex: 1;
+.card-container {
     display: flex;
-}
-
-
-.upcomingevents-2 p {
-    color: rgb(79, 104, 107);
-    padding-top: 0.5rem;
-}
-
-
-
-.horizontalcard-container {
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
+    justify-content: center;
+    gap: 1rem;
     flex-wrap: wrap;
-  
-    
+
 }
 
-.horizontal-card {
-    display: flex;
+.vertical-card {
+    width: 300px;
     background-color: #DAF5FB;
-    width: 100%;
-    height: 300px;
-    border-radius: 2px;
-    align-self: center;
+    border-radius: 4px;
     overflow: hidden;
-
-}
-
-.card-content-1 {
-    flex: 1;
-    display: flex;
-    
     
 }
 
-.horizontal-card img{
-    width: 150px;
-    height: 100%;
+.vertical-card img {
+    width: 100%;
+    height: 250px;
     object-fit: cover;
-    flex: 1;
- 
 }
 
-.card-content-2 {
-    flex: 2;
-    display: flex;
-    flex-direction: column;
-    align-self: center;
-    padding: 3rem  3rem 3rem;
-    
+.v-card-content {
+    padding: 32px 24px;
 }
+
+
 
 .card-date {
-    color: #AE6DBE;
+    color: #7D478A;
     font-weight: 400;
     padding: 0;
     margin-bottom: 1rem;
@@ -83,78 +52,9 @@
     color: #272727;
     font-weight: 400;
     margin-top: 0;
-    
 }
 
-
-
-@media (max-width: 1200px) {
-    .section-upcomingevents-flex {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        align-self: center;
-        align-content: center;
-        justify-items: center;
-        justify-self: center;
-        flex-wrap: wrap;
-        padding: 15% 0%;
-    
-        
-    }
-
-
-
-
-   
-    .horizontal-card {
-        display: flex;
-        flex-direction: column;
-        background-color: #DAF5FB;
-        width: 300px;
-        height: auto;
-        border-radius: 2px;
-        align-self: center;
-        overflow: hidden;
-    }
-
-    .upcomingevents-1 {
-        flex: 1;
-        justify-content: center;
-        align-content: center;
-        align-items: center;
-        justify-self: center;
-    }
-    
-    
-    .upcomingevents-2 {
-        flex: 1;
-        display: flex;
-    }
-
-    .card-content-1 {
-        display: flex;
-        justify-content: center;
-
-    }
-    
-    .horizontal-card img{
-        width: 100%;
-        height: 250px;
-        object-fit: cover;
-     
-    }
-    
-    .card-content-2 {
-        display: flex;
-        flex-direction: column;
-        align-self: center;
-        padding: 3rem 3rem 3rem 3rem;
-        
-    }
-
-    
-
-
+.v-card-content p {
+    color: rgb(79, 104, 107);
+    padding-top: 0.5rem;
 }
-/* END EVENTS */
