--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -129,6 +129,7 @@ table {
 
 .button-main-wide {
     background-color: #D688E9;
+    color: black;
     padding: 14px 16px;
     border: none;
     border-radius: 2px;
