--- a/CSS/Upcoming-Events.css
+++ b/CSS/Upcoming-Events.css
@@ -22,11 +22,16 @@
 }
 
 .vertical-card {
+    transition-property: box-shadow;
+    transition-duration: 0s;
     width: 300px;
     background-color: #DAF5FB;
     border-radius: 4px;
     overflow: hidden;
-    
+}
+
+.vertical-card:hover {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1)
 }
 
 .vertical-card img {
@@ -38,8 +43,6 @@
 .v-card-content {
     padding: 32px 24px;
 }
-
-
 
 .card-date {
     color: #7D478A;
