--- a/CSS/index.css
+++ b/CSS/index.css
@@ -39,13 +39,13 @@
 .buttons-container {
     display: flex;
     flex-wrap: wrap;
+    gap: 1rem 0;
     
 }
 
 @media (max-width: 1200px) {
     .section-intro {
         flex-direction: column-reverse;
-
     }
     
     .intro-1 {
@@ -70,6 +70,8 @@
 
     .buttons-container {
         display: flex;
+        flex-direction: column;
+        gap: 1rem;
         align-self: center;
     }
 }
