--- a/CSS/contribution.css
+++ b/CSS/contribution.css
@@ -1,3 +1,4 @@
+@import url(Main.css);
 
 .wrapper-main{
     width: 80%;
@@ -24,30 +25,8 @@
     align-self: center;
 }
 
-.card-container {
-    display: flex;
-    justify-content: center;
-    gap: 1rem;
-    flex-wrap: wrap;
-
-}
-
 .vertical-card {
-    width: 350px;
-    background-color: #DAF5FB;
-    border-radius: 10px;
-    overflow: hidden;
-    
-}
-
-.vertical-card img {
-    width: 100%;
-    height: 250px;
-    object-fit: cover;
-}
-
-.v-card-content {
-    padding: 32px 24px;
+    width: 350px; 
 }
 
 .get-in-touch {
