--- a/CSS/exhibitions.css
+++ b/CSS/exhibitions.css
@@ -1,4 +1,6 @@
 
+@import url(Main.css);
+
 .exhibitions-flex {
     display: flex;
     align-items: center;
@@ -7,38 +9,23 @@
     padding: 5% 0 2% 0;
 }
 
-.card-container {
-    display: flex;
-    justify-content: center;
-    gap: 1rem;
-    flex-wrap: wrap;
-}
 
 .vertical-card {
     flex-basis: 30%;
     gap: 100px;
-    width: 300px;
     min-width: 300px;
-    background-color: #DAF5FB;
-    border-radius: 10px;
-    overflow: hidden;
-    color: black;
 }
-
-.card-container img {
-    width: 100%;
-    height: 270px;
-    object-fit: cover;
-
-}
-
 
 .card-content {
     padding: 2rem;
 }
 
-
-
-.button-card {
-    margin-top: 2rem;
+.section-upcomingevents-flex {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    padding: 10% 0 15% 0;
+    flex-wrap: wrap;
 }
