--- a/CSS/Cards.css
+++ b/CSS/Cards.css
@@ -1,12 +1,11 @@
-/* START EVENTS */
 
+/* Card Building blocks */
 
 .card-container {
     display: flex;
     justify-content: center;
     gap: 1rem;
     flex-wrap: wrap;
-
 }
 
 .vertical-card {
@@ -16,12 +15,11 @@
     background-color: #DAF5FB;
     border-radius: 4px;
     overflow: hidden;
-    color: black;
-    
+    color: var(--black);
 }
 
-.vertical-card:hover {
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1)
+.card-purple {
+    background-color: #F5E8F8;
 }
 
 .vertical-card img {
@@ -29,6 +27,15 @@
     height: 250px;
     object-fit: cover;
 }
+
+/*Card Animation*/
+
+.vertical-card:hover {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1)
+}
+
+
+/*Card details*/
 
 .v-card-content {
     padding: 32px 24px;
@@ -42,7 +49,7 @@
 }
 
 .card-title {
-    color: #272727;
+    color: var(--black);
     font-weight: 400;
     margin-top: 0;
 }
