--- a/CSS/Nav.css
+++ b/CSS/Nav.css
@@ -1,11 +1,9 @@
-/* NAV */
 
-
-
+/*Sections*/
 
 .section-navigation {
     width: 100%;
-    background-color: #F0FBFF;
+    background-color: var(--background-blue-2);
     position: fixed;
     display: flex;
     flex-direction: row;
@@ -23,12 +21,18 @@ nav {
     align-items: center;
 }
 
+header {
+    position: relative;
+    background: var(--background-blue-2);
+    color: var(--main-blue);
+    font-size: 1rem;
+}
 
+/*Icons and logo*/
 
 .hamburger-icon {
     display: none;
 }
-
 
 
 .logo {
@@ -36,22 +40,16 @@ nav {
     width: 5rem;
 }
 
+/*Links*/
+
 nav li {
     list-style: none;
-}
-
-header {
-    position: relative;
-    background: #F0FBFF;
-    color: #007A94;
-    font-size: 1rem;
-
 }
 
 nav a {
     transition-property: border;
     transition-duration: 0s;
-    color: #007A94;
+    color: var(--main-blue);
     padding: 10px 20px;
     text-decoration: none;
     font-family: 'poppins' , Verdana, Geneva, Tahoma, sans-serif;
@@ -64,25 +62,25 @@ nav a:hover {
     border-bottom: 2px solid #007A94;
 }
 
-#menu-checkbox {
-    display: none;
-}
-
- 
 .link-contactus {
     transition-property: border;
     transition-duration: 0s;
     font-weight: 900;
-    color: #B75BCE;
+    color: var(--dark-purple);
 }
 
 .link-contactus:hover {
-    border-bottom: 2px solid #B75BCE;
+    border-bottom: 2px solid var(--dark-purple);
+}
 
+/*Checkbox*/
+
+#menu-checkbox {
+    display: none;
 }
 
 
-
+/*Mobile view*/
 
 @media (max-width: 800px) {
 
@@ -93,7 +91,7 @@ nav a:hover {
     #menu-checkbox:checked ~ nav {
         display: flex;
         flex-direction: column;
-        background: #F0FBFF;
+        background: var(--background-blue-2);
         width: 100%;
         height: 100vh;
         align-items: flex-start;
@@ -133,9 +131,6 @@ nav a:hover {
         z-index: 100
     }
     
-    
-   
-
     nav ul {
         display: flex;
         flex-direction: column;
