--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,5 +1,11 @@
 @import url(Main.css);
 
+/*General*/
+
+main {
+    padding-top: 2rem;
+}
+
 /* Start Section 1 */
 
 .section-intro {
@@ -95,7 +101,7 @@
 }
 
 
-/* START FORKIDS */
+/* Start Forkids*/
 
 .section-forkids {
     background-color: var(--background-blue);
@@ -143,7 +149,7 @@
     }
     
     .forkids-1 {
-        width: 44%;
+        width: 60%;
         padding-top: 3rem;
         align-items: center;
     }
@@ -159,9 +165,9 @@
 }
 }
 
-/* END FORKIDS */
+/* End Forkids */
 
-/* START FORTEACHERS */
+/* Start Forteachers */
 
 .section-forteachers {
     background-color: var(--background-blue-2);
@@ -208,7 +214,7 @@
     }
     
     .forteachers-2 {
-        width: 44%;
+        width: 60%;
         padding-top: 3rem;
         align-items: center;
         
@@ -225,9 +231,9 @@
 }
 }
 
-/* END FORTEACHERS */
+/* End Forteachers*/
 
-/* START FORRESEARCHERS */
+/* Start Forresearchers */
 
 .section-forresearchers {
     background-color: var(--background-blue); 
@@ -245,19 +251,18 @@
 }
 
 .forresearchers-1 {
-    width: 30%;
+    width: 60%;
     display: flex;
     flex: 1;
-    justify-content: flex-start;
+    justify-content: center;
     flex-direction: column;
 }
 
 .forresearchers-2 {
     display: flex;
-    flex: 2;
-    justify-content: flex-end; 
+    flex: 1;
+    justify-content: center; 
 }
-
 
 
 .img-forresearchers {
@@ -276,13 +281,12 @@
     }
     
     .forresearchers-1 {
-        width: 44%;
+        width: 60%;
         padding-top: 3rem;
         align-items: center;
        
     }
 
-    
     .img-forresearchers {
         width: 100%;
         height: 100%;
@@ -294,5 +298,5 @@
 }
 }
 
-/* END FORRESEARCHERS */
+/* End Forresearchers */
 
