--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -42,7 +42,7 @@ main {
     --background-purple: #F5E8F8;
     --background-blue: #DAF5FB;
     --background-blue-2: #F0FBFF;
-    --dark-purple: #B75BCE;
+    --dark-purple: #9C3FB3;
     --light-purple: #E6B8F1;
     --black: #030303;
 }
