--- a/CSS/Cards.css
+++ b/CSS/Cards.css
@@ -12,7 +12,7 @@
     transition-property: box-shadow;
     transition-duration: 0s;
     width: 300px;
-    background-color: var(--card);
+    background-color: #DAF5FB;
     border-radius: 4px;
     overflow: hidden;
     color: var(--black);
